force-app/main/default/objects/ToDo__c/ToDo__c.object-meta.xml
<CustomObject>
    <label>ToDo</label>
    <nameField>
        <label>ToDo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ToDos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>