force-app/main/default/objects/ToDo__c/fields/Connected_Org_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Connected Org Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>