force-app/main/default/objects/ToDo__c/fields/Is_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Done</label>
    <type>Checkbox</type>
</CustomField>