force-app/main/default/objects/ToDo__c/listViews/Adminqueue_ToDo.listView-meta.xml
<ListView>
    <fullName>Adminqueue_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Adminqueue</label>
    <queue>Adminqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>