force-app/main/default/objects/ToDo__c/listViews/Devqueue_ToDo.listView-meta.xml
<ListView>
    <fullName>Devqueue_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Devqueue</label>
    <queue>Devqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>