force-app/main/default/objects/ToDo__c/listViews/Managequeue_ToDo.listView-meta.xml
<ListView>
    <fullName>Managequeue_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Managequeue</label>
    <queue>Managequeue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>